<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/dailyTaskListFragment"
        android:icon = "@drawable/selector_coffee"
        android:title = "@string/label_daily" />

    <item android:id="@+id/importantTaskListFragment"
        android:icon = "@drawable/selector_time_briefcase"
        android:title = "@string/label_important" />

    <item
        android:id="@+id/taskFragment"
        android:checked="true"
        android:enabled="false"
        android:title="" />

    <item android:id="@+id/essentialTaskListFragment"
        android:icon = "@drawable/selector_briefcase"
        android:title = "@string/label_essential" />

    <item android:id="@+id/doneTaskListFragment"
        android:icon = "@drawable/selector_tick_board"
        android:title = "@string/label_done" />
</menu>